fix: letter spacing: 0

--- a/packages/components/src/ObjectViewer/Table/Table.scss
+++ b/packages/components/src/ObjectViewer/Table/Table.scss
@@ -25,7 +25,7 @@
 
 		:global(.btn) {
 			text-transform: none;
-			letter-spacing: none;
+			letter-spacing: 0;
 		}
 	}
 
